--- a/eboutique-web/src/main/webapp/assets/css/styles.css
+++ b/eboutique-web/src/main/webapp/assets/css/styles.css
@@ -33,12 +33,17 @@ a:hover, a:visited, a:link, a:active
 }
 
 .marque-div {
-	font-size:10px;
+	font-size:20px;
 	color : black;
 }
 
 .prix-div {
 	font-size:30px;
+}
+
+.libelle-div {
+	font-size:30px;
+	margin-bottom: 10px;
 }
 
 header {
